# poetry-package-template-gemfury

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  sample.envrc  write_requirements.sh
poetrypackagetemplate/: demo.py
tests/: test_demo.py
